Bug 128476 - Active Window drop-down in Navigation View Hogs Screen
Summary: Active Window drop-down in Navigation View Hogs Screen
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.4
Keywords: bibisectRequest, implementationError
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2019-10-30 10:48 UTC by larrybradley
Modified: 2019-11-01 12:43 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description larrybradley 2019-10-30 10:48:52 UTC
Description:
Navigation view expands based on document name in the Active Windows drop-down at the bottom of the Navigation screen, steals screen real estate from actual document, cannot shrink the Navigation section. Don't see any real reason for the Active Windows drop-down in the Navigation view to begin with. Please consider removing it.

Steps to Reproduce:
1.View Sidebar
2.Click on Navigator icon.
3.Try to drag and make narrow the sidebar, cannot because sidebar must be as wide as the name of the file. For files with long names, this means the sidebar takes up most of the window real estate.

Actual Results:
Nothing. Cannot make sidebar window smaller (i.e., narrow it).

Expected Results:
Want to be able to narrow (make smaller) the Sidebar window when viewing a file with a long filename.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Just get rid of the Active Window drop-down at the bottom of the Navigator view in the sidebar.
Comment 1 V Stuart Foote 2019-10-30 14:29:17 UTC
Confirmed on Windows 10 Ent 64-bit en-US (1903) with
Version: 6.3.2.2 (x64)
Build ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

The Document listbox at the bottom of the Navigator content panel/deck of the Sidebar holds listing of documents currently open in LO.

The entire deck will expand its minimum width to the length needed to hold the full string of overlong document name in the content panel's listbox

listbox widget needs to allow content panel & deck to be resized, either to collapse--or to the miniumum of button controls stacked in the button box at the top of the content panel.

The listbox field holding the long file name should scroll on cursor movment to expose full name--rather than expanding the Sidebar Deck
Comment 2 Heiko Tietze 2019-11-01 08:37:15 UTC
Cannot confirm with stable/kde5 but run into the same issue when I start with VCL gtk3 (cannot size the sidebar at anymore in this case).

=> Bug
Comment 3 Commit Notification 2019-11-01 11:46:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d9956e6a6f22e9b9a4793d3d342d265267427d7d

Resolves: tdf#128476 limit sidebar navigation panel file name combobox width

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2019-11-01 11:51:53 UTC
fixed in master, backport to 6-3 in gerrit
Comment 5 Commit Notification 2019-11-01 12:43:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/89521131b6f9e5c6aa7266312577877d5d324e8c

Resolves: tdf#128476 limit sidebar navigation panel file name combobox width

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.