Resolves: tdf#128476 limit sidebar navigation panel file name combobox width

Change-Id: I81549ada6f6b736ad54e18a4fec6807b8d0412af
Reviewed-on: https://gerrit.libreoffice.org/81875
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>